#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.
# AC Autoconf
# SA sina

AC_PREREQ(2.59)
AC_INIT([dip_logtail], [1.0], [guoxian1@staff.sina.com.cn])
AC_CONFIG_SRCDIR([common.h])
AC_CONFIG_HEADER([config.h])
AM_INIT_AUTOMAKE
AM_INIT_AUTOMAKE([foreign -Wall])
# To install locally
AC_PREFIX_DEFAULT([/usr/local])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET

# Checks for libraries.


# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_TYPE_SIZE_T

# Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_FUNC_STAT
AC_CONFIG_FILES([Makefile])
AC_OUTPUT

#finsh#
echo "$EXTERNAL_PATH $EXTERNAL_PATH"
